# tiralabra

./: README.md  pyproject.toml
documentation/: vaatimusmaarittely.md
documentation/viikkoraportit/: viikko1.md  viikko2.md
