[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["loeppoe <maria.lipponen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
